--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 *   {
     margin: 0;
     padding: o;
+    box-sizing: border-box;
 }
 
 body    {
@@ -35,7 +36,31 @@ header nav ul li{
     display: inline;
 }
 header nav ul li a  {
-    margin: o 30px;
+    margin: 0 30px;
     font-weight: lighter;
     font-size: 22px;
 }
+
+footer  {
+    background-color: #fce138;
+    width: 100%;
+    padding: 40px 35px;
+}
+
+footer h2   {
+    display: inline;
+    color: #024e76;
+    font-size: 30px;
+    margin: 0;
+} 
+
+footer div  {
+    float: right;
+    line-height: 1.5;
+    text-align: right;
+}
+
+footer a    {
+    color: #025e76;
+}
+
