--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,3 +64,62 @@ footer a    {
     color: #025e76;
 }
 
+section {
+    padding: 60px;
+}
+
+/* Hero Style Start*/
+.hero   {
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 600px;
+    position: relative;
+}
+
+/*Hero Form Styling*/
+.hero-form  {
+    color: #024e76;
+    background-color: #fce138;
+    padding:20px;
+    width: 500px;
+    border: solid 3px #024e76;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
+}
+
+.hero-form h3{
+    margin: 0;
+    font-size: 24px;
+}
+
+.hero-form p    {
+    margin: 5px 0 15px 0;
+}
+
+.hero-form label    {
+    margin: 0 5px;
+}
+
+.hero-form button{
+    color: #fce138;
+    background-color: #024e76;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+}
+
+.form-input {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px ;
+}
+
+/*Hero Form Styling End*/
+
+
