--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ header a{
     color: #fce138;
 }
 
-/* Nav Bar Stylibng*/
+/* Nav Bar Styling*/
 header nav{
     float: right;
     margin: 7px 0;
