--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,15 @@ body    {
     }
 
 /*Applying Styles to <header> */
-header{
+header  {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     padding: 20px 35px;
     background-color: #39a6b2;
 }
-header h1{
-    display: inline;
+
+header h1   {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
@@ -29,7 +32,6 @@ header a{
 
 /* Nav Bar Styling*/
 header nav{
-    float: right;
     margin: 7px 0;
 }
 header nav ul li{
