--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,20 +48,21 @@ header nav ul li a  {
 }
 
 footer  {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     background-color: #fce138;
     width: 100%;
     padding: 40px 35px;
 }
 
 footer h2   {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 } 
 
 footer div  {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -75,22 +76,28 @@ section {
 }
 
 /* Hero Style Start*/
-.hero-cta h2    {
-    color: #fce138;
-    text-align: center;
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
 }
 
-.hero-cta p    {
-    color: white;
-    text-align: center;
+.hero-cta h2    {
+    font-weight: italic;
+    font-size: 55px;
+    color: #fce138;
 }
 
 .hero   {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
     background-position: center;
-    height: 600px;
-    position: relative;
 }
 
 /*Hero Form Styling*/
@@ -98,11 +105,9 @@ section {
     color: #024e76;
     background-color: #fce138;
     padding:20px;
-    width: 500px;
     border: solid 3px #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
+    width: 40%;
+    margin: 3.5%;
 }
 
 .hero-form h3{
