--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ header nav ul {
     list-style: none;
 }
 header nav ul li a  {
-    margin: 0 30px;
+   padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -82,7 +82,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2    {
@@ -94,6 +94,7 @@ section {
 .hero   {
     display: flex;
     flex-wrap: wrap;
+    align-items: flex-start;
     justify-content: center;
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
@@ -207,7 +208,7 @@ section {
   /*Styling for similar headings in what we do and what you do*/
   
   .section-title    {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -336,7 +337,22 @@ section {
     font-size: 16px;
 
 }
-
+/*flex-row class to style multiple css selectors*/
 .flex-row   {
     display: flex;
 }
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+   
+  }
+  
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 768px) {
+    
+  }
+  
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+  @media screen and (max-width: 575px) {
+    
+  }
