--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,13 @@ header  {
     justify-content: space-between;
     padding: 20px 35px;
     background-color: #39a6b2;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed; 
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 header h1   {
@@ -23,6 +30,7 @@ header h1   {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a{
@@ -45,6 +53,13 @@ header nav ul li a  {
    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+header nav ul li a:hover{
+    background-color: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 
 footer  {
@@ -76,6 +91,17 @@ section {
 }
 
 /* Hero Style Start*/
+.hero   {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed;
+}
+
 .hero-cta {
     width: 35%;
     text-align: right;
@@ -89,26 +115,19 @@ section {
     font-weight: italic;
     font-size: 55px;
     color: #fce138;
-}
-
-.hero   {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: center;
-    background-image: url("../images/hero-bg.jpg");
-    background-size: cover;
-    background-position: center;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 /*Hero Form Styling*/
 .hero-form  {
     color: #024e76;
-    background-color: #fce138;
+    background-color: rgb(252, 225, 56, 0.8);
     padding:20px;
     border: solid 3px #024e76;
     width: 40%;
     margin: 3.5%;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form h3{
@@ -130,6 +149,10 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
+}
+.hero-form button:hover {
+    background-color: #39a6b2;
 }
 
 .form-input {
@@ -140,6 +163,13 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px ;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.form-input:focus{
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 
 /*Hero Form Styling End*/
@@ -161,12 +191,16 @@ section {
   .step{
       margin: 50px auto;
       padding-bottom: 50px;
-      width: 80%;
       border-bottom: 1px solid #39a6b2;
+      width: 80%;
       display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: space-between;
+  }
+  /*Remoces border from last .step (step 4)*/
+  .step:last-child  {
+    border-bottom: none;
   }
 
   .step h3{
@@ -325,6 +359,13 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.contact-form input, .contact-form textarea:focus   {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 
 .contact-form button{
@@ -335,7 +376,12 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+}
 
+.contact-form button:hover{
+    color: #fce138;
+    background: #39a6b2;
 }
 /*flex-row class to style multiple css selectors*/
 .flex-row   {
@@ -345,6 +391,7 @@ section {
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
     header  {
+        position: relative;
         padding-bottom: 0;
         justify-content: center;
     }
